Bug 1599286 - Prevent -moz-min-font-size-ratio from interfering with cached scrollbar styles. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D54674

UltraBlame original commit: 82865b3cc6ed7e84ad53611cc61995a76a0be6d8

--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -50,6 +50,7 @@ scrollcorner, resizer, scrollbar, scrollbarbutton, slider {
   
   -moz-list-reversed: initial;
   -moz-font-smoothing-background-color: initial;
+  -moz-min-font-size-ratio: initial;
 
   
 
